--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,8 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <label for="email">Email:</label>
     <input type="email" id="email" formControlName="email" />
+    <label for="username">Username:</label>
+    <input type="text" id="username" formControlName="username" />
   
     <div *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
       <small *ngIf="loginForm.controls['email'].errors?.['required']">Email is required.</small>
